Fix wrapping css

--- a/src/components/common/TxnPreview/TxnPreview.module.scss
+++ b/src/components/common/TxnPreview/TxnPreview.module.scss
@@ -74,9 +74,10 @@ $extended-summary-height: 2.25rem;
         .subSummary{
           align-items: center;
           display: flex;
+          flex-wrap: wrap;
         }
         .subSummary > *{
-         margin-right: 0.625rem;
+          margin-right: 0.625rem;
         }
       }
 
